--- a/src/index.css
+++ b/src/index.css
@@ -521,6 +521,7 @@ a {
   .navpanel {
     display: none;
   }
+
   .layout {
     margin-left: auto;
   }
@@ -573,6 +574,7 @@ a {
     z-index: 2000;
     width: 100%;
     padding: 0;
+    padding-bottom: 20px;
     gap: 0;
   }
   .bottomNav::-webkit-scrollbar {
@@ -703,4 +705,27 @@ a {
   .card {
     padding: 20px;
   }
+}
+
+@media (max-height: 634px) and (min-width: 1023px) {
+  .resume {
+    display: none;
+  }
+  .resume-height {
+    display: block !important;
+    position: fixed;
+    right: 30px;
+    top: 30px;
+    z-index: 2000;
+  }
+}
+
+.resume-height {
+  display: none;
+  padding: 10px 30px;
+  background-color: var(--cta);
+  text-align: center;
+  border-radius: 5px;
+  font-size: 12px;
+  text-transform: uppercase;
 }
