--- a/src/index.css
+++ b/src/index.css
@@ -1067,3 +1067,23 @@ a {
 .noscroll::-webkit-scrollbar {
   display: none !important; /* Chrome, Safari */
 }
+
+.yt-video {
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%; /* 16:9 aspect ratio */
+  height: 0;
+  overflow: hidden;
+  border-radius: 12px; /* optional */
+  margin: 20px 0;
+}
+
+.yt-video iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
+  object-fit: cover;
+}
